<resources>
    <string name="app_name">CallSikandar</string>

    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="login">Already have an account ? Log in</string>
    <string name="text_enter_your_phone_number">Enter your phone number to receive an SMS code and
        complete sign up
    </string>
    <string name="resend">Resend</string>
    <string name="send_sms_code">SEND SMS CODE</string>
    <string name="verify">VERIFY</string>
    <string name="submit">SUBMIT</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgotten_your_password">Forgotten your password</string>
    <string name="reset">Reset?</string>
    <string name="log_In">LOG IN</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up">Sign up</string>

    <string name="dialog_basic_positive">Ok</string>
    <string name="dialog_validation_title">Validation Error</string>


    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_appointments">Appointments</string>
    <string name="drawer_item_service_requests">Service Requests</string>
    <string name="drawer_item_service_providers">Service Providers</string>
    <string name="drawer_item_rate_callsikandar">Rate Callsikandar</string>
    <string name="drawer_item_manage_vehicles">Manage Vehicles</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_support">Support</string>
    <string name="drawer_item_log_out">Log out</string>
    <string name="drawer_item_collapsing_toolbar_drawer">CollapsingToolbar Drawer</string>

    <string name="dialog_logout_title">LOGOUT</string>
    <string name="dialog_logout_content">Are you sure you want to LOGOUT</string>
    <string name="dialog_logout_positive">Yes</string>
    <string name="dialog_logout_negative">No</string>


    <string name="activity_title_sign_up">Sign Up</string>
    <string name="activity_title_log_in">Log In</string>
    <string name="activity_title_terms_of_use">Terms Of Use</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_add_vehicle">Add Vehicle</string>
    <string name="activity_title_update_vehicle">Update Vehicle</string>
    <string name="activity_title_service_request">Service Request</string>


    <string name="vehicle">Vehicle Make and Model</string>
    <string name="registration_number">Registration Number</string>
    <string name="mf_year">Year of Manufacture</string>
    <string name="last_service">Last Service Date</string>
    <string name="km_read">KM Reading</string>

    <string name="button_add_vehicle">ADD VEHICLE</string>
    <string name="button_update_vehicle">UPDATE VEHICLE</string>

    <string name="Rs">\u20B9</string>

    <string name="dialog_booking_confirmation_title">Booking Confirmation</string>
    <string name="dialog_booking_confirmation_positive">BOOK</string>
    <string name="dialog_booking_confirmation_negative">DISCARD</string>


</resources>
