<android.support.design.widget.CoordinatorLayout
    android:id="@+id/clMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/app_background_grey"
    tools:context="com.actiknow.callsikandar.activity.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:visibility="visible"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar1"
                style="@style/Widget.MyApp.ActionBar"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@color/primary"
                android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="parallax">
                <RelativeLayout
                    android:id="@+id/toolbar_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical">
                    <!--
                                        <ImageView
                                            android:id="@+id/imageView"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:src="@drawable/ic_navigation_menu"
                                            android:layout_alignParentLeft="true"
                                            android:layout_alignParentStart="true"/>
                    -->
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
            <android.support.design.widget.CoordinatorLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                tools:context="com.actiknow.liveaudit.activity.MainActivity">

            </android.support.design.widget.CoordinatorLayout>
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:id="@+id/textview"
                android:text="@string/text_enter_your_phone_number"
                android:textSize="@dimen/text_size_medium"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textview"
                android:layout_margin="@dimen/activity_margin">
                <EditText
                    android:id="@+id/etMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mobile Number"
                    android:inputType="phone"
                    android:padding="@dimen/edittext_padding"
                    android:textSize="@dimen/text_size_medium"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvResend"
                android:layout_margin="@dimen/activity_margin">
                <EditText
                    android:id="@+id/etOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="OTP"
                    android:inputType="phone"
                    android:padding="@dimen/edittext_padding"
                    android:textSize="@dimen/text_size_medium"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/tvResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/resend"
                android:textColor="@color/text_color_red"
                android:textSize="@dimen/text_size_medium"
                android:visibility="visible"
                android:layout_below="@+id/input_layout_mobile"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llAlreadyAccount"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSendSMSCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:background="@drawable/bg_button"
                    android:text="@string/send_sms_code"
                    android:gravity="center"
                    android:padding="@dimen/activity_margin"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/text_size_extra_large"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:background="@drawable/bg_button"
                    android:text="@string/submit"
                    android:gravity="center"
                    android:padding="@dimen/activity_margin"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/text_size_extra_large"
                    android:visibility="gone"/>

            </LinearLayout>


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/llAlreadyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="@dimen/text_size_medium"/>

            <TextView
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/text_color_red"
                android:textSize="@dimen/text_size_medium"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>