<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/clMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/app_background_grey"
    tools:context="com.actiknow.callsikandar.activity.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:visibility="visible"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar1"
                style="@style/Widget.MyApp.ActionBar"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@color/primary"
                android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="parallax">
                <RelativeLayout
                    android:id="@+id/toolbar_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical">
                    <!--
                                        <ImageView
                                            android:id="@+id/imageView"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:src="@drawable/ic_navigation_menu"
                                            android:layout_alignParentLeft="true"
                                            android:layout_alignParentStart="true"/>
                    -->
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
            <android.support.design.widget.CoordinatorLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                tools:context="com.actiknow.liveaudit.activity.MainActivity">

            </android.support.design.widget.CoordinatorLayout>
        </android.support.design.widget.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appBar">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_car_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin">
                    <AutoCompleteTextView
                        android:id="@+id/etCarModel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle"
                        android:padding="@dimen/edittext_padding"
                        android:textSize="@dimen/text_size_medium"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_registration_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_car_model"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin">
                    <EditText
                        android:id="@+id/etRegistrationNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_number"
                        android:padding="@dimen/edittext_padding"
                        android:textSize="@dimen/text_size_medium"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_year_of_manufacture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_registration_number"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin">
                    <EditText
                        android:id="@+id/etYearOfManufacture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mf_year"
                        android:padding="@dimen/edittext_padding"
                        android:textSize="@dimen/text_size_medium"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_last_service_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_year_of_manufacture"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin">
                    <EditText
                        android:id="@+id/etLastServiceDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/last_service"
                        android:padding="@dimen/edittext_padding"
                        android:textSize="@dimen/text_size_medium"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_km_reading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_last_service_date"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin">
                    <EditText
                        android:id="@+id/etKmReading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/km_read"
                        android:inputType="number"
                        android:padding="@dimen/edittext_padding"
                        android:textSize="@dimen/text_size_medium"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_layout_km_reading"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:hint="Fuel type"
                    android:padding="@dimen/edittext_padding"
                    android:textSize="@dimen/text_size_medium"/>
                <RadioGroup
                    android:id="@+id/rgFuelType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textview"
                    android:layout_alignStart="@+id/textview"
                    android:layout_below="@+id/textview"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rbPetrol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Petrol"
                        android:textSize="@dimen/text_size_medium"/>
                    <RadioButton
                        android:id="@+id/rbDiesel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Diesel"
                        android:textSize="@dimen/text_size_medium"/>
                    <RadioButton
                        android:id="@+id/rbCNG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CNG"
                        android:textSize="@dimen/text_size_medium"/>
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rgFuelType"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvAddVehicle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rgFuelType"
                        android:background="@drawable/bg_button"
                        android:elevation="@dimen/button_elevation"
                        android:gravity="center"
                        android:padding="@dimen/activity_margin"
                        android:text="@string/button_add_vehicle"
                        android:textColor="@color/text_color_white"
                        android:textSize="@dimen/text_size_extra_large"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvUpdateVehicle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rgFuelType"
                        android:background="@drawable/bg_button"
                        android:elevation="@dimen/button_elevation"
                        android:gravity="center"
                        android:padding="@dimen/activity_margin"
                        android:text="@string/button_update_vehicle"
                        android:textColor="@color/text_color_white"
                        android:textSize="@dimen/text_size_extra_large"
                        android:textStyle="bold"
                        android:visibility="gone"/>

                </LinearLayout>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>